[tool.poetry]
name = "esphome-harmony-companion"
version = "0.1.0"
description = ""
authors = ["mohnen <markus.mohnen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
esphome = "^2024.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
